# rust-postgres-queue-load-test

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis.duckdb.sql  config.yaml  run_perf_test.sh
perf_tests/: aws.md  local.md  local_partitioning.md
src/: main.rs  sqlx_queue.rs  sqlx_shorturl.rs
