[package]
name = "rust-postgres-queue-load-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
config = { version = "0.13", features = ["yaml"] }
log = "0.4"
fern = "0.6"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
rs-snowflake = "0.6"
